Bug 318928 - [layer 'blending mode' list] Subgroup disapear on adding new favorite
Summary: [layer 'blending mode' list] Subgroup disapear on adding new favorite
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Compiled Sources Linux
: NOR minor
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords:
: 318326 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-04-26 13:49 UTC by David REVOY
Modified: 2013-08-23 14:51 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David REVOY 2013-04-26 13:49:29 UTC
This (minor) bug makes some subgroup disappearing on the large list of Blendings Modes ( toolbar, and layer docker ) 

To reproduce :
- Open a blending mode list 
- Unfold HSI
- Add 'Color HSI' to favorite
- Try to remove it from favorite and add it again. 

Result : Only 3 subgroup available : http://i.imgur.com/rNW0bL1.jpg

Workaround : Adding/removing other blending-modes to the list sometimes fix the list. btw, restart Krita works best.
Comment 1 Halla Rempt 2013-04-26 14:38:28 UTC
Ack, I've seen this happen too. I wonder if it isn';t actually a Qt issue :-(
Comment 2 Halla Rempt 2013-06-24 14:41:24 UTC
Looks like it was a qt issue, since after updating I cannot reproduce. What is your Qt versions and can you still reproduce?
Comment 3 David REVOY 2013-06-24 14:56:58 UTC
I can still reproduce here, but not really annoying bug as 95% of the time I use blending mode stored in my favorites : 

here is my Qt version :
>> deevad@workstation ~ $ qmake -v
>> QMake version 2.01a
>> Using Qt version 4.8.3 in /usr/lib/x86_64-linux-gnu
Comment 4 vanyossi 2013-06-24 17:22:05 UTC
I can reproduce as well

~ $ qmake -v
QMake version 2.01a
Using Qt version 4.8.4 in /usr/lib64/qt4

as a side note it's worse when changing the last item of each subgroup list. If selected with the mouse In my particular case it doesn't even allow me to set some specific blending modes, like Color HSI, to my favorites as the scrollbar appears during the click event causing a glitch. Works ok with the stylus, and can be avoided with the mouse if you emulate the stylus "behavior" click > drag > release.

It's not a very annoying bug, but could be confusing.
Comment 5 Bollebib 2013-08-09 15:00:10 UTC
*** Bug 318326 has been marked as a duplicate of this bug. ***
Comment 6 Bollebib 2013-08-09 15:04:32 UTC
 pinpointed when the issue arises in my case

I think it only happens when REMOVING from favourites. when I ADD, even only one, to favourites the list resets itself and is fine. Only removing screws up the list,it seems

https://bugs.kde.org/show_bug.cgi?id=318326 (duplicate ,maybe some extra info)
Comment 7 Dmitry Kazakov 2013-08-23 14:51:25 UTC
Git commit b4c07ecf24ba95b4caf7748de59a2a88374bdc27 by Dmitry Kazakov.
Committed on 23/08/2013 at 14:48.
Pushed by dkazakov into branch 'master'.

Fixed a weird Favorite Composite Ops bug

The model of the categorized list is completely refactored. Now there are
at least three classes involved into the creation of the list:

1) KisCategoriesMapper --- stores a list of the items of the list and
   controls their internal state.

2) KisCategorizedListModel --- the model that works on the basis of the
   categories mapper.

3) KisSortedCategorizedListModel --- a wrapper for a categorized model that
   handles the sorting of the list into categories and items.

M  +7    -8    krita/plugins/extensions/dockers/defaultdockers/kis_layer_box.cpp
M  +4    -4    krita/plugins/paintops/libpaintop/kis_compositeop_option.cpp
M  +13   -41   krita/plugins/paintops/libpaintop/kis_paintop_options_model.cpp
M  +11   -12   krita/plugins/paintops/libpaintop/kis_paintop_options_model.h
M  +5    -11   krita/plugins/paintops/libpaintop/kis_paintop_options_widget.cpp
M  +2    -0    krita/ui/CMakeLists.txt
M  +3    -8    krita/ui/dialogs/kis_dlg_layer_properties.cc
A  +19   -0    krita/ui/kis_categories_mapper.cpp     [License: GPL (v2+)]
A  +307  -0    krita/ui/kis_categories_mapper.h     [License: GPL (v2+)]
M  +6    -7    krita/ui/kis_categorized_item_delegate.cpp
M  +1    -1    krita/ui/kis_categorized_item_delegate.h
A  +29   -0    krita/ui/kis_categorized_list_model.cpp     [License: GPL (v2+)]
M  +144  -350  krita/ui/kis_categorized_list_model.h
M  +88   -54   krita/ui/kis_composite_ops_model.cc
M  +37   -7    krita/ui/kis_composite_ops_model.h
M  +28   -30   krita/ui/kis_paint_ops_model.cpp
M  +38   -27   krita/ui/kis_paint_ops_model.h
M  +8    -10   krita/ui/kis_paintop_box.cc
M  +12   -0    krita/ui/tests/CMakeLists.txt
A  +234  -0    krita/ui/tests/kis_categories_mapper_test.cpp     [License: GPL (v2+)]
A  +34   -0    krita/ui/tests/kis_categories_mapper_test.h     [License: GPL (v2+)]
A  +33   -0    krita/ui/tests/kis_categorized_list_model_test.cpp     [License: GPL (v2+)]
A  +31   -0    krita/ui/tests/kis_categorized_list_model_test.h     [License: GPL (v2+)]
A  +19   -0    krita/ui/tests/testing_categories_mapper.cpp     [License: GPL (v2+)]
A  +98   -0    krita/ui/tests/testing_categories_mapper.h     [License: GPL (v2+)]
M  +20   -12   krita/ui/widgets/kis_categorized_list_view.cpp
M  +0    -21   krita/ui/widgets/kis_categorized_list_view.h
M  +48   -25   krita/ui/widgets/kis_cmb_composite.cc
M  +22   -10   krita/ui/widgets/kis_cmb_composite.h
M  +4    -7    krita/ui/widgets/kis_paintop_list_widget.cpp
M  +5    -2    krita/ui/widgets/kis_paintop_list_widget.h

http://commits.kde.org/calligra/b4c07ecf24ba95b4caf7748de59a2a88374bdc27