Fixed a weird Favorite Composite Ops bug

The model of the categorized list is completely refactored. Now there are
at least three classes involved into the creation of the list:

1) KisCategoriesMapper --- stores a list of the items of the list and
   controls their internal state.

2) KisCategorizedListModel --- the model that works on the basis of the
   categories mapper.

3) KisSortedCategorizedListModel --- a wrapper for a categorized model that
   handles the sorting of the list into categories and items.

BUG:318928